--- a/requirements.in
+++ b/requirements.in
@@ -21,3 +21,10 @@ packaging<24      # many libs still cap here
 numpy<2           # unstructured-inference, pdfplumber, etc.
 charset-normalizer<3.3
 async-timeout<5
+
+# -- NLP stack ---------------------------------------------------
+spacy[transformers]~=3.8           # core NLP + HF bridge
+spacy-transformers~=1.3            # (sometimes installed automatically, but be explicit)
+torch>=2.2,<3                      # CPU or CUDA wheel resolved at install
+python-dotenv>=1,<2                # load .env files
+requests~=2.32
