--- a/requirements.in
+++ b/requirements.in
@@ -25,6 +25,9 @@ async-timeout<5
 # -- NLP stack ---------------------------------------------------
 spacy[transformers]~=3.8           # core NLP + HF bridge
 spacy-transformers~=1.3            # (sometimes installed automatically, but be explicit)
+# spaCy English model ------------------------------------------------
+# (hosted only on GitHub, so pin by URL)
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
 torch>=2.2,<3                      # CPU or CUDA wheel resolved at install
 python-dotenv>=1,<2                # load .env files
 requests~=2.32
