--- a/requirements.txt
+++ b/requirements.txt
@@ -131,6 +131,8 @@ effdet==0.4.1
     # via unstructured
 emoji==2.14.1
     # via unstructured
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl
+    # via -r requirements.in
 et-xmlfile==2.0.0
     # via openpyxl
 exceptiongroup==1.3.0
