--- a/requirements.txt
+++ b/requirements.txt
@@ -262,6 +262,7 @@ langchain-core==0.2.43
     #   langchain-ollama
     #   langchain-text-splitters
 langchain-ollama==0.1.3
+langchain-google-genai
     # via -r requirements.in
 langchain-text-splitters==0.2.4
     # via langchain
