--- a/requirements.in
+++ b/requirements.in
@@ -11,11 +11,12 @@ pymupdf                         # only if you’re OK with the AGPL
 prefect~=3.4                 # 2025-05-29 :contentReference[oaicite:3]{index=3}
 
 # ---------------  LLM layer  ---------------
-pydantic>=2.7,<3                  # schema validation
-langchain-core==0.2.*             # prompt objects & flow control
-langchain-community==0.2.*        # ready-made output parsers
-langchain-ollama==0.1.*           # thin wrapper around Ollama’s REST
-langchain-google-genai==0.0.*     # Google Gemini support
+ pydantic>=2.7,<3
+ # keep the same *major* for every langchain-* package
+ langchain-core>=0.3,<0.4
+ langchain-community>=0.3,<0.4
+ langchain-ollama>=0.2,<0.3          # 0.2.x requires core 0.3
+ langchain-google-genai>=2,<3        # 2.x requires core 0.3
 
 # ---- transient compatibility pins ----
 packaging<24      # many libs still cap here
