--- a/requirements.txt
+++ b/requirements.txt
@@ -4,32 +4,30 @@
 #
 #    pip-compile requirements.in
 #
-accelerate==1.7.0
+accelerate==1.9.0
     # via unstructured-inference
 aiofiles==24.1.0
     # via unstructured-client
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.12.12
-    # via
-    #   langchain
-    #   langchain-community
-aiosignal==1.3.2
+aiohttp==3.12.15
+    # via langchain-community
+aiosignal==1.4.0
     # via aiohttp
 aiosqlite==0.21.0
     # via prefect
-alembic==1.16.1
+alembic==1.16.4
     # via prefect
 annotated-types==0.7.0
     # via pydantic
 antlr4-python3-runtime==4.9.3
     # via omegaconf
-anyio==4.9.0
+anyio==4.10.0
     # via
     #   httpx
     #   prefect
     #   starlette
-apprise==1.9.3
+apprise==1.9.4
     # via prefect
 asgi-lifespan==2.1.0
     # via prefect
@@ -62,7 +60,7 @@ catalogue==2.0.10
     #   spacy
     #   srsly
     #   thinc
-certifi==2025.4.26
+certifi==2025.8.3
     # via
     #   apprise
     #   httpcore
@@ -70,13 +68,12 @@ certifi==2025.4.26
     #   requests
 cffi==1.17.1
     # via cryptography
-chardet==5.2.0
-    # via unstructured
 charset-normalizer==3.2.0
     # via
     #   -r requirements.in
     #   pdfminer-six
     #   requests
+    #   unstructured
 click==8.1.8
     # via
     #   apprise
@@ -105,8 +102,9 @@ contourpy==1.3.2
     # via matplotlib
 coolname==2.2.0
     # via prefect
-cryptography==45.0.4
+cryptography==45.0.5
     # via
+    #   msoffcrypto-tool
     #   pdfminer-six
     #   prefect
     #   unstructured-client
@@ -121,7 +119,7 @@ dataclasses-json==0.6.7
     # via
     #   langchain-community
     #   unstructured
-dateparser==1.2.1
+dateparser==1.2.2
     # via prefect
 deprecated==1.2.18
     # via pikepdf
@@ -139,7 +137,7 @@ exceptiongroup==1.3.0
     # via
     #   anyio
     #   prefect
-fastapi==0.115.12
+fastapi==0.116.1
     # via prefect
 filelock==3.18.0
     # via
@@ -147,24 +145,31 @@ filelock==3.18.0
     #   torch
     #   transformers
 filetype==1.2.0
-    # via unstructured
+    # via
+    #   langchain-google-genai
+    #   unstructured
 flatbuffers==25.2.10
     # via onnxruntime
-fonttools==4.58.2
+fonttools==4.59.0
     # via matplotlib
 frozenlist==1.7.0
     # via
     #   aiohttp
     #   aiosignal
-fsspec==2025.5.1
+fsspec==2025.7.0
     # via
     #   huggingface-hub
     #   prefect
     #   torch
-google-api-core[grpc]==2.25.0
-    # via google-cloud-vision
+google-ai-generativelanguage==0.6.18
+    # via langchain-google-genai
+google-api-core[grpc]==2.25.1
+    # via
+    #   google-ai-generativelanguage
+    #   google-cloud-vision
 google-auth==2.40.3
     # via
+    #   google-ai-generativelanguage
     #   google-api-core
     #   google-cloud-vision
 google-cloud-vision==3.10.2
@@ -173,17 +178,17 @@ googleapis-common-protos==1.70.0
     # via
     #   google-api-core
     #   grpcio-status
-graphviz==0.20.3
+graphviz==0.21
     # via prefect
 greenlet==3.2.3
     # via sqlalchemy
-griffe==1.7.3
+griffe==1.9.0
     # via prefect
-grpcio==1.73.0
+grpcio==1.74.0
     # via
     #   google-api-core
     #   grpcio-status
-grpcio-status==1.73.0
+grpcio-status==1.74.0
     # via google-api-core
 h11==0.16.0
     # via
@@ -199,13 +204,16 @@ httpcore==1.0.9
     # via
     #   httpx
     #   prefect
+    #   unstructured-client
 httpx[http2]==0.28.1
     # via
     #   langsmith
     #   ollama
     #   prefect
     #   unstructured-client
-huggingface-hub==0.33.0
+httpx-sse==0.4.1
+    # via langchain-community
+huggingface-hub==0.34.3
     # via
     #   accelerate
     #   timm
@@ -244,40 +252,42 @@ jsonpatch==1.33
     #   prefect
 jsonpointer==3.0.0
     # via jsonpatch
-jsonschema==4.24.0
+jsonschema==4.25.0
     # via prefect
 jsonschema-specifications==2025.4.1
     # via jsonschema
 kiwisolver==1.4.8
     # via matplotlib
-langchain==0.2.17
+langchain==0.3.27
     # via langchain-community
-langchain-community==0.2.19
+langchain-community==0.3.27
     # via -r requirements.in
-langchain-core==0.2.43
+langchain-core==0.3.72
     # via
     #   -r requirements.in
     #   langchain
     #   langchain-community
+    #   langchain-google-genai
     #   langchain-ollama
     #   langchain-text-splitters
-langchain-ollama==0.1.3
-langchain-google-genai
+langchain-google-genai==2.1.9
     # via -r requirements.in
-langchain-text-splitters==0.2.4
+langchain-ollama==0.2.3
+    # via -r requirements.in
+langchain-text-splitters==0.3.9
     # via langchain
 langcodes==3.5.0
     # via spacy
 langdetect==1.0.9
     # via unstructured
-langsmith==0.1.147
+langsmith==0.4.11
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
 language-data==1.3.0
     # via langcodes
-lxml==5.4.0
+lxml==6.0.0
     # via
     #   pikepdf
     #   python-docx
@@ -287,7 +297,7 @@ mako==1.3.10
     # via alembic
 marisa-trie==1.2.1
     # via language-data
-markdown==3.8
+markdown==3.8.2
     # via
     #   apprise
     #   unstructured
@@ -299,13 +309,15 @@ markupsafe==3.0.2
     #   mako
 marshmallow==3.26.1
     # via dataclasses-json
-matplotlib==3.10.3
+matplotlib==3.10.5
     # via unstructured-inference
 mdurl==0.1.2
     # via markdown-it-py
 mpmath==1.3.0
     # via sympy
-multidict==6.4.4
+msoffcrypto-tool==5.4.2
+    # via unstructured
+multidict==6.6.3
     # via
     #   aiohttp
     #   yarl
@@ -316,10 +328,8 @@ murmurhash==1.0.13
     #   thinc
 mypy-extensions==1.1.0
     # via typing-inspect
-neo4j==5.28.1
+neo4j==5.28.2
     # via -r requirements.in
-nest-asyncio==1.6.0
-    # via unstructured-client
 networkx==3.4.2
     # via
     #   torch
@@ -332,7 +342,6 @@ numpy==1.26.4
     #   accelerate
     #   blis
     #   contourpy
-    #   langchain
     #   langchain-community
     #   matplotlib
     #   onnx
@@ -348,10 +357,12 @@ numpy==1.26.4
     #   transformers
     #   unstructured
     #   unstructured-inference
-oauthlib==3.2.2
+oauthlib==3.3.1
     # via requests-oauthlib
 olefile==0.47
-    # via python-oxmsg
+    # via
+    #   msoffcrypto-tool
+    #   python-oxmsg
 ollama==0.5.1
     # via langchain-ollama
 omegaconf==2.3.0
@@ -360,7 +371,7 @@ onnx==1.18.0
     # via
     #   unstructured
     #   unstructured-inference
-onnxruntime==1.22.0
+onnxruntime==1.22.1
     # via
     #   unstructured
     #   unstructured-inference
@@ -368,9 +379,9 @@ opencv-python==4.11.0.86
     # via unstructured-inference
 openpyxl==3.1.5
     # via unstructured
-opentelemetry-api==1.34.1
+opentelemetry-api==1.36.0
     # via prefect
-orjson==3.10.18
+orjson==3.11.1
     # via
     #   langsmith
     #   prefect
@@ -380,6 +391,7 @@ packaging==23.2
     #   accelerate
     #   huggingface-hub
     #   langchain-core
+    #   langsmith
     #   marshmallow
     #   matplotlib
     #   onnxruntime
@@ -391,7 +403,7 @@ packaging==23.2
     #   transformers
     #   unstructured-pytesseract
     #   weasel
-pandas==2.3.0
+pandas==2.3.1
     # via
     #   unstructured
     #   unstructured-inference
@@ -399,20 +411,20 @@ pathspec==0.12.1
     # via prefect
 pdf2image==1.17.0
     # via unstructured
-pdfminer-six==20250327
+pdfminer-six==20250506
     # via
     #   pdfplumber
     #   unstructured
     #   unstructured-inference
-pdfplumber==0.11.6
+pdfplumber==0.11.7
     # via -r requirements.in
 pendulum==3.1.0
     # via prefect
-pi-heif==0.22.0
+pi-heif==1.1.0
     # via unstructured
-pikepdf==9.8.1
+pikepdf==9.10.2
     # via unstructured
-pillow==11.2.1
+pillow==11.3.0
     # via
     #   matplotlib
     #   pdf2image
@@ -423,7 +435,7 @@ pillow==11.2.1
     #   python-pptx
     #   torchvision
     #   unstructured-pytesseract
-prefect==3.4.6
+prefect==3.4.11
     # via -r requirements.in
 preshed==3.0.10
     # via
@@ -437,10 +449,12 @@ propcache==0.3.2
     #   yarl
 proto-plus==1.26.1
     # via
+    #   google-ai-generativelanguage
     #   google-api-core
     #   google-cloud-vision
 protobuf==6.31.1
     # via
+    #   google-ai-generativelanguage
     #   google-api-core
     #   google-cloud-vision
     #   googleapis-common-protos
@@ -462,13 +476,14 @@ pycocotools==2.0.10
     # via effdet
 pycparser==2.22
     # via cffi
-pydantic==2.11.5
+pydantic==2.11.7
     # via
     #   -r requirements.in
     #   confection
     #   fastapi
     #   langchain
     #   langchain-core
+    #   langchain-google-genai
     #   langsmith
     #   ollama
     #   prefect
@@ -484,21 +499,23 @@ pydantic-core==2.33.2
     #   pydantic
 pydantic-extra-types==2.10.5
     # via prefect
-pydantic-settings==2.9.1
-    # via prefect
-pygments==2.19.1
+pydantic-settings==2.10.1
+    # via
+    #   langchain-community
+    #   prefect
+pygments==2.19.2
     # via rich
-pymupdf==1.26.1
+pymupdf==1.26.3
     # via -r requirements.in
 pypandoc==1.15
     # via unstructured
 pyparsing==3.2.3
     # via matplotlib
-pypdf==5.6.0
+pypdf==5.9.0
     # via
     #   unstructured
     #   unstructured-client
-pypdfium2==4.30.1
+pypdfium2==4.30.0
     # via
     #   pdfplumber
     #   unstructured-inference
@@ -513,9 +530,9 @@ python-dateutil==2.9.0.post0
     #   pandas
     #   pendulum
     #   prefect
-python-docx==1.1.2
+python-docx==1.2.0
     # via unstructured
-python-dotenv==1.1.0
+python-dotenv==1.1.1
     # via
     #   -r requirements.in
     #   pydantic-settings
@@ -533,7 +550,7 @@ python-pptx==1.0.2
     # via unstructured
 python-slugify==8.0.4
     # via prefect
-python-socks[asyncio]==2.7.1
+python-socks[asyncio]==2.7.2
     # via prefect
 pytz==2025.2
     # via
@@ -541,7 +558,7 @@ pytz==2025.2
     #   neo4j
     #   pandas
     #   prefect
-pywin32==310
+pywin32==311
     # via docker
 pyyaml==6.0.2
     # via
@@ -565,7 +582,7 @@ referencing==0.36.2
     # via
     #   jsonschema
     #   jsonschema-specifications
-regex==2024.11.6
+regex==2025.7.34
     # via
     #   dateparser
     #   nltk
@@ -594,11 +611,11 @@ requests-toolbelt==1.0.0
     #   unstructured-client
 rfc3339-validator==0.1.4
     # via prefect
-rich==14.0.0
+rich==14.1.0
     # via
     #   prefect
     #   typer
-rpds-py==0.25.1
+rpds-py==0.26.0
     # via
     #   jsonschema
     #   referencing
@@ -615,6 +632,8 @@ safetensors==0.5.3
     #   transformers
 scipy==1.15.3
     # via unstructured-inference
+semver==3.0.4
+    # via prefect
 shellingham==1.5.4
     # via typer
 six==1.17.0
@@ -623,7 +642,7 @@ six==1.17.0
     #   langdetect
     #   python-dateutil
     #   rfc3339-validator
-smart-open==7.1.0
+smart-open==7.3.0.post1
     # via weasel
 sniffio==1.3.1
     # via
@@ -646,7 +665,7 @@ spacy-transformers==1.3.9
     # via
     #   -r requirements.in
     #   spacy
-sqlalchemy[asyncio]==2.0.41
+sqlalchemy[asyncio]==2.0.42
     # via
     #   alembic
     #   langchain
@@ -659,26 +678,25 @@ srsly==2.5.1
     #   spacy-transformers
     #   thinc
     #   weasel
-starlette==0.46.2
+starlette==0.47.2
     # via fastapi
 sympy==1.14.0
     # via
     #   onnxruntime
     #   torch
-tenacity==8.5.0
+tenacity==9.1.2
     # via
-    #   langchain
     #   langchain-community
     #   langchain-core
 text-unidecode==1.3
     # via python-slugify
 thinc==8.3.4
     # via spacy
-timm==1.0.15
+timm==1.0.19
     # via
     #   effdet
     #   unstructured-inference
-tokenizers==0.21.1
+tokenizers==0.21.4
     # via transformers
 toml==0.10.2
     # via prefect
@@ -713,8 +731,9 @@ typer==0.16.0
     #   prefect
     #   spacy
     #   weasel
-typing-extensions==4.14.0
+typing-extensions==4.14.1
     # via
+    #   aiosignal
     #   aiosqlite
     #   alembic
     #   anyio
@@ -736,8 +755,8 @@ typing-extensions==4.14.0
     #   python-oxmsg
     #   python-pptx
     #   referencing
-    #   rich
     #   sqlalchemy
+    #   starlette
     #   torch
     #   typer
     #   typing-inspect
@@ -757,23 +776,21 @@ tzdata==2025.2
     #   tzlocal
 tzlocal==5.3.1
     # via dateparser
-ujson==5.10.0
-    # via prefect
-unstructured[docx,image,local-inference,pdf,pptx]==0.17.2
+unstructured[docx,image,local-inference,pdf,pptx]==0.18.11
     # via -r requirements.in
-unstructured-client==0.36.0
+unstructured-client==0.42.0
     # via unstructured
 unstructured-inference==1.0.5
     # via unstructured
 unstructured-pytesseract==0.3.15
     # via unstructured
-urllib3==2.4.0
+urllib3==2.5.0
     # via
     #   docker
     #   requests
-uv==0.7.12
+uv==0.8.4
     # via prefect
-uvicorn==0.34.3
+uvicorn==0.35.0
     # via prefect
 wasabi==1.1.3
     # via
@@ -791,14 +808,16 @@ wrapt==1.17.2
     #   deprecated
     #   smart-open
     #   unstructured
-xlrd==2.0.1
+xlrd==2.0.2
     # via unstructured
-xlsxwriter==3.2.3
+xlsxwriter==3.2.5
     # via python-pptx
 yarl==1.20.1
     # via aiohttp
 zipp==3.23.0
     # via importlib-metadata
+zstandard==0.23.0
+    # via langsmith
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
